	    and performance... Wait, caches were completely meaningless? orz...
	* qrencode.[ch]:
	  - QRcode_clearCache() has been eliminated.
	* tests/prof_qrencode.c, tests/pthread_qrencode.c, tests/test_mask.c,
	  tests/test_mmask.c, tests/test_monkey.c, tests/test_mqrspec.c,
	  tests/test_qrencode.c, tests/test_qrspec.c:
	  - Removed cache clearing calls.

2014.09.08 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* qrenc.c:
	  - Added color support for EPS output.

2014.08.18 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* configure.ac:
	  - Added new option "--enable-asan" that enables AddressSanitizer.

2014.08.15 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* tests/view_qrcode.c:
	  - Version number check improved for Micro QR Code.

2014.08.05 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* configure.ac, Makefile.am, tests/Makefile.am:
	  - Added some conditional flags for configuration/building process.
	  - HAVE_PNG and HAVE_SDL can be refered from both Makefile and program
	    code.
	* tests/view_qrcode.c:
	  - Use SDL_WaitEvent() instead of SDL_PollEvent().
	* tests/common.h:
	  - Added show_QRcode() for testing purposes. (Thanks to Sunil Maganally)
	* tests/*.c:
	  - main()'s arguments now correctly declared.

2014.07.25 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* tests/URI_testset.inc, tests/test_split_urls.c, tests/Makefile.am,
	  .gitignore:
	  - A new test suite evaluating splitting efficiency has been added.
	  - Still undertrial.

2014.07.24 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* qrinput.c:
	  - Code refactoring (QRinput_Struct_count has been added).
	  - And more code cleanups.
	  - Avoid to add a Structued-append chunk when only one symbol is
	    generated. (Thanks to Yoshimichi Inoue)
	* tests/test_qrinput.c:
	  - New test has been added.
	* qrinput.c, qrencode.1.in:
	  - Added new option, "verbose".
	* tests/common.h:
	  - printQRinputStruct() has been added.
	* rsecc.{c,h}:
	  - Copyright notice and credit has been corrected.
	* README, README.md: