@@ -14,6 +14,8 @@
 	  tests/test_mmask.c, tests/test_monkey.c, tests/test_mqrspec.c,
 	  tests/test_qrencode.c, tests/test_qrspec.c:
 	  - Removed cache clearing calls.
+	* qrencode.c:
+	  - FrameFiller now allocated in stack, not heap.
 
 2014.09.08 Kentaro FUKUCHI <kentaro@fukuchi.org>
 	* qrenc.c:
